# HCE_project_Task_1

Motor_node_MCU/: CMakeLists.txt  prj.conf
Motor_node_MCU/boards/: nucleo_g474re.overlay
Motor_node_MCU/include/: canfd.hpp  gpio_overlay.hpp  heartbeat.hpp  stepper_motor_driver.hpp
Motor_node_MCU/src/: canfd.cpp  gpio_overlay.cpp  heartbeat.cpp  main.cpp  stepper_motor_driver.cpp
Sensor_node_MCU/: CMakeLists.txt  prj.conf
Sensor_node_MCU/GTest/: CMakeLists.txt  test_canfd.cpp  test_doubles.cpp  test_flow_sensor.cpp  test_heartbeat.cpp  test_lcd_Display.cpp  test_pressure_sensor.cpp  test_sensor_manager.cpp
Sensor_node_MCU/boards/: nucleo_g474re.overlay
Sensor_node_MCU/include/: canfd.hpp  flow_sensor.hpp  gpio_overlay.hpp  heartbeat.hpp  lcd_Display.hpp  lcd_display.hpp  pressure_sensor.hpp  sensor_manager.hpp
Sensor_node_MCU/src/: canfd.cpp  flow_sensor.cpp  gpio_overlay.cpp  heartbeat.cpp  lcd_Display.cpp  lcd_display.cpp  main.cpp  pressure_sensor.cpp  sensor_manager.cpp
Supervisor_node_MCU/: CMakeLists.txt  prj.conf
Supervisor_node_MCU/boards/: nucleo_g474re.overlay
Supervisor_node_MCU/include/: alarm.hpp  canfd.hpp  gpio_overlay.hpp  heartbeat_monitoring.hpp
Supervisor_node_MCU/src/: alarm.cpp  canfd.cpp  gpio_overlay.cpp  heartbeat_monitoring.cpp  main.cpp
common/motor/include/: can_bus_driver.hpp  message_codec.hpp
common/motor/src/: can_bus_driver.cpp  message_codec.cpp
common/sensor/include/: can_bus_driver.hpp  message_codec.hpp
common/sensor/src/: can_bus_driver.cpp  message_codec.cpp
common/supervisor/include/: can_bus_driver.hpp  message_codec.hpp
common/supervisor/src/: can_bus_driver.cpp  message_codec.cpp
motor_node/: CMakeLists.txt  prj.conf
motor_node/boards/: nucleo_g474re.overlay
motor_node/include/: gpio_overlay.hpp  heartbeat.hpp  motor_controller.hpp  stepper_motor_driver.hpp
motor_node/src/: gpio_overlay.cpp  heartbeat.cpp  main.cpp  motor_controller.cpp  stepper_motor_driver.cpp
sensor_node/: CMakeLists.txt  prj.conf
sensor_node/boards/: nucleo_g474re.overlay
sensor_node/include/: flow_sensor.hpp  gpio_overlay.hpp  heartbeat.hpp  lcd_display.hpp  pressure_sensor.hpp  sensor_manager.hpp
sensor_node/src/: flow_sensor.cpp  gpio_overlay.cpp  heartbeat.cpp  lcd_display.cpp  main.cpp  pressure_sensor.cpp  sensor_manager.cpp
supervisor_node/: CMakeLists.txt  prj.conf
supervisor_node/boards/: nucleo_g474re.overlay
supervisor_node/include/: alarm_logic.hpp  gpio_overlay.hpp  heartbeat_monitor.hpp  supervisor_manager.hpp
supervisor_node/src/: alarm_logic.cpp  gpio_overlay.cpp  heartbeat_monitor.cpp  main.cpp  supervisor_manager.cpp
